test/pos/literals02.smt2_
; Uninterpreted Sorts


; Uninterpreted Functions
(declare-fun len ((@a0 @a1)) Int)
(declare-fun strLen (([] Char)) Int)
(declare-fun lit$cat Str)


; Qualifiers


; Well-formedness constraints


; Horn constraints
(constraint (forall ((Data.Foldable.$36$fFoldable$91$$93$$35$$35$rlx (Data.Foldable.Foldable [fix$36$36$36$$36$91$36$$36$93$36$]))(GHC.Types.True##6u Bool)(GHC.Types.False##68 Bool)(GHC.Types.EQ##6U GHC.Types.Ordering)(GHC.Types.LT##6S GHC.Types.Ordering)(GHC.Types.GT##6W GHC.Types.Ordering)(lq_anf$##1677724177##dFz Str)(lq_anf$##1677724178##dFA ([] Char))(v1 Int)) (=> (and True (and (= v28 GHC.Types.True##6u) (and (= v29 GHC.Types.False##68) (and (= v30 GHC.Types.EQ##6U) (and (= v31 GHC.Types.LT##6S) (and (= v32 GHC.Types.GT##6W) (and (= lq_tmp$x##35 lit$cat) (and (and (= lq_tmp$x##41 lq_anf$##1677724177##dFz) (and (= (apply len lq_tmp$x##41) (strLen lq_anf$##1677724177##dFz)) (>= (apply len lq_tmp$x##41) 0))) (and (>= v1 0) (= v1 (apply len lq_anf$##1677724178##dFA))))))))))) (= v1 3))))
