test/neg/NonLinear.hs.smt2_
; Uninterpreted Sorts


; Uninterpreted Functions


; Qualifiers


; Well-formedness constraints
(wf $k_$35$$35$38 ((GHC.Types.EQ GHC.Types.Ordering)(VV Int)(GHC.Types.GT GHC.Types.Ordering)(GHC.Types.LT GHC.Types.Ordering)(pig Int)))


; Horn constraints
(constraint (forall ((GHC.Num.$fNumInt##rlL (GHC.Num.Num Int))(GHC.Types.EQ##6U GHC.Types.Ordering)(GHC.Types.LT##6S GHC.Types.Ordering)(GHC.Types.GT##6W GHC.Types.Ordering)(zink##alG Int)(zonk##alH Int)(bob##alJ Int)(alice##alI Int)(v1 Int)) (=> (and True (and (= v28 GHC.Types.EQ##6U) (and (= v29 GHC.Types.LT##6S) (and (= v30 GHC.Types.GT##6W) (and (= zink##0 5) (and (= zonk##1 67) (and ($k_$35$$35$38 GHC.Types.EQ##6U lq_tmp$x##65 GHC.Types.GT##6W GHC.Types.LT##6S zonk##alH) (and ($k_$35$$35$38 GHC.Types.EQ##6U lq_tmp$x##71 GHC.Types.GT##6W GHC.Types.LT##6S zink##alG) (= v1 (+ alice##alI bob##alJ)))))))))) (= v1 0))))
(constraint (forall ((GHC.Num.$fNumInt##rlL (GHC.Num.Num Int))(GHC.Types.EQ##6U GHC.Types.Ordering)(GHC.Types.LT##6S GHC.Types.Ordering)(GHC.Types.GT##6W GHC.Types.Ordering)(pig##amI Int)(lq_anf$##dvQ Int)(v4 Int)) (=> (and True (and (= v28 GHC.Types.EQ##6U) (and (= v29 GHC.Types.LT##6S) (and (= v30 GHC.Types.GT##6W) (and True (and (= lq_tmp$x##41 1) (= v4 (+ pig##amI lq_anf$##dvQ)))))))) ($k_$35$$35$38 GHC.Types.EQ##6U v4 GHC.Types.GT##6W GHC.Types.LT##6S pig##amI))))
